hphp/hack/test/typecheck/yield/yield_kv3.php.exp
File "yield_kv3.php", line 4, characters 3-18:
Invalid yield (Typing[4110])
File "yield_kv3.php", line 3, characters 33-38:
Expected string
File "yield_kv3.php", line 4, characters 18-18:
But got int
