hphp/hack/test/typecheck/yield/yield_kv3.php
<?hh

function f(): Generator<string, string, void> {
  yield 'one' => 1;
}
